Fix "Failed to create a timer" issue on Windows

Use a QTimer on the stack instead of the shared QTimer::singleShot().

Thanks to Nahomi Gröhn for the detailed bug report and investigation.

Pick-to: 6.2 5.15
Fixes: QTBUG-94570
Change-Id: I212119ed6987266819762c83749b0747acadf026
Reviewed-by: Michael Brasser <michael.brasser@live.com>