src/remoteobjects/qremoteobjectreplica.cpp
@@ -352,8 +352,11 @@ bool QConnectedReplicaImplementation::waitForSource(int timeout)
                          &loop, QEventLoop::staticMetaObject.indexOfMethod("quit()"),
                          Qt::DirectConnection, nullptr);
 
+    QTimer t; // NB: Related to QTBUG-94570 - don't use QTimer::singleShot here.
     if (timeout >= 0) {
-        QTimer::singleShot(timeout, &loop, &QEventLoop::quit);
+        t.setSingleShot(true);
+        connect(&t, &QTimer::timeout, &loop, &QEventLoop::quit);
+        t.start(timeout);
     }
 
     // enter the event loop and wait for a reply
@@ -454,7 +457,13 @@ bool QConnectedReplicaImplementation::waitForFinished(const QRemoteObjectPending
     QEventLoop loop;
     loop.connect(call.d->watcherHelper.data(), &QRemoteObjectPendingCallWatcherHelper::finished,
                  &loop, &QEventLoop::quit);
-    QTimer::singleShot(timeout, &loop, &QEventLoop::quit);
+
+    QTimer t; // NB: Related to QTBUG-94570 - don't use QTimer::singleShot here.
+    if (timeout >= 0) {
+        t.setSingleShot(true);
+        connect(&t, &QTimer::timeout, &loop, &QEventLoop::quit);
+        t.start(timeout);
+    }
 
     // enter the event loop and wait for a reply
     loop.exec(QEventLoop::ExcludeUserInputEvents | QEventLoop::WaitForMoreEvents);
